# lantrn-job-service-rust

./: .dockerignore  Cargo.toml  Dockerfile  docker-entrypoint.sh  fly.toml
src/: main.rs
