[package]
name = "lantrn-job-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "lantrn"

[dependencies]
chrono = { version = "0.4.23" }
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.2"
